Removed mono social font, now using font awesome 5, added mastodom

--- a/config.toml
+++ b/config.toml
@@ -55,4 +55,5 @@ PygmentsStyle = "monokailight"
 	email = "antonio.martinovic@pm.me"
     github = "https://www.github.com/TopHatCroat"
     linkedin  = "https://www.linkedin.com/in/antonio-martinovi%C4%87-29203210a/"
-    stackoverflow  = "https://stackoverflow.com/users/4828716/antonio-martinovi%c4%87"
+    stack-overflow  = "https://stackoverflow.com/users/4828716/antonio-martinovi%c4%87"
+	mastodon = "mastodon.social/@sike"
