--- a/themes/mini/exampleSite/config.yaml
+++ b/themes/mini/exampleSite/config.yaml
@@ -6,7 +6,7 @@ theme: hugo-theme-mini
 # Default content language, support en (English) / zh (Chinese) / nl (Dutch) / fr (French) / es (Spanish), default 'en'
 defaultContentLanguage: en
 
-# !!! exampleSite only, you may need to delete the line: `themesDir: ../../` 
+# !!! exampleSite only, you may need to delete the line: `themesDir: ../../`
 themesDir: ../../
 
 hasCJKLanguage: true
@@ -16,7 +16,6 @@ permalinks:
 paginate: 3
 
 googleAnalytics: your-google-analytics-id
-disqusShortname: your-disqus-shortname
 
 # Hugo Configure Markup
 # More info: https://gohugo.io/getting-started/configuration-markup#
@@ -58,12 +57,8 @@ params:
 
   # To enable RSS, you could set `enableRSS: true`, default is `true`
   enableRSS: true
-  # To enable comments, you may need to set `disqusShortname`
-  enableComments: true
-  # To enable comments, you may need to set `googleAnalytics`
+  # To enable Google Analytics, you may need to set `googleAnalytics`
   enableGoogleAnalytics: true
-  # To enable table of content, you could set `showToc: true`, default is `false`
-  showToc: true
   # To hidden powerBy message in the page footer, you could set: `showPowerBy: false`, default is `true`
   showPowerBy: true
   # To enable math typesetting , you could set `math: true`, default is `false`
@@ -71,7 +66,7 @@ params:
   # To hidden post summary in home page, you could set `hiddenPostSummaryInHomePage: true`, default is `false`
   hiddenPostSummaryInHomePage: false
   # Website copy write, default: '© Copyright 2021 ❤️ {params.author}'
-  copyright: '' 
+  copyright: ''
 
   # Extra links in navigation
   links:
