--- a/themes/mini/exampleSite/config-example.yaml
+++ b/themes/mini/exampleSite/config-example.yaml
@@ -23,8 +23,8 @@ social:
 
 
 params:
-  author: TopHatCroat
-  bio: Team Lead
+  author: Joe Smith
+  bio: Software Engineer
   description: My Blog
   enableRSS: true
   enableGoogleAnalytics: true
