Remove exess stuff

--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ params:
   author: Antonio Martinović
   bio: >-
     I'm a team lead and tech enthusiast, this is my place for writing about things I find interesting including,
-    development, tech and leadership. I also enjoy listening to jazz while philosophizing about great life questions.
+    development, tech and leadership. I also enjoy asking the stupid questions and giving unsolicited advice.
 
   avatarImage: images/avatar.png
 
