--- a/themes/mini/theme.yaml
+++ b/themes/mini/theme.yaml
@@ -1,6 +1,6 @@
 name: izi
 license: MIT
-licenselink: 'https://github.com/tophatcroat/izi-hugo-theme/blob/master/LICENSE.md'
+licenseLink: 'https://github.com/tophatcroat/izi-hugo-theme/blob/master/LICENSE.md'
 description: 'Minimal, text based theme for blogs'
 homepage: 'https://github.com/tophatcroat/izi-hugo-theme'
 tags:
