--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "themes/mini"]
 	path = themes/mini
 	url = https://github.com/nodejh/hugo-theme-mini.git
+[submodule "themes/izi"]
+	path = themes/izi
+	url = https://github.com/tophatcroat/izi-hugo-theme.git
