--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     container: ubuntu
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@master
       - name: Checkout the theme
         uses: textbook/git-checkout-submodule-action@master
       - name: Setup Hugo
