--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.ref == 'refs/heads/master' }}
+        if: ${{ github.ref == 'refs/heads/publish' }}
         with:
           personal_token: ${{ secrets.BLOG_PUBLISH_SECRET }}
           external_repository: tophatcroat/tophatcroat.github.io
