--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,9 +2,9 @@ name: Publish
 
 on:
   push:
-    branches: [ publish ]
+    branches: [ master ]
   pull_request:
-    branches: [ publish ]
+    branches: [ master ]
 
 jobs:
   build:
@@ -26,7 +26,7 @@ jobs:
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.ref == 'refs/heads/publish' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         with:
           personal_token: ${{ secrets.BLOG_PUBLISH_SECRET }}
           external_repository: tophatcroat/tophatcroat.github.io
